--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -10,30 +10,23 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
-    server moralis-ropsten:8080;
-    server moralis-ropsten-archive:8080;
-    server infura-ropsten:8080 backup;
-    server infura-ropsten:8080 backup;
+    server infura-ropsten:8080;
   }
 
   upstream kovan {
     keepalive 512;
     zone upstream_dynamic 256k;
 
-    server moralis-kovan:8080;
-    server moralis-kovan-archive:8080;
-    server infura-kovan:8080 backup;
-    server infura-kovan:8080 backup;
+    server infura-kovan:8080;
   }
 
   upstream mainnet {
     keepalive 512;
     zone upstream_dynamic 256k;
 
-    server moralis-mainnet:8080;
-    server moralis-mainnet-archive:8080;
-    server infura-mainnet:8080 backup;
-    server infura-mainnet:8080 backup;
+    server alchemy-mainnet:8080;
+    server infura-mainnet:8080;
+    server infura-mainnet-2:8080 backup;
   }
 
   upstream binance {
@@ -50,7 +43,6 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
-    server moralis-fantom:8080;
     server rpc-fantom:8080;
   }
 
@@ -58,7 +50,6 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
-    server moralis-avalanche:8080;
     server rpc-avalanche:8080;
   }
 
@@ -66,8 +57,7 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
-    server moralis-binance-testnet:8080;
-    server moralis-binance-testnet-archive:8080;
+    server binance-testnet:8080;
   }
 
   upstream polygon {
@@ -75,15 +65,15 @@ http {
     zone upstream_dynamic 256k;
 
     server rpc-polygon:8080;
+    server alchemy-polygon:8080;
   }
 
   upstream polygon-mumbai {
     keepalive 512;
     zone upstream_dynamic 256k;
 
-    server moralis-polygon-mumbai:8080;
-    server moralis-polygon-mumbai-archive:8080;
-    server alchemy-polygon-mumbai:8080 backup;
+    server rpc-polygon-mumbai:8080;
+    server alchemy-polygon-mumbai:8080;
   }
 
 
