--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -64,6 +64,7 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
+    server moralis-polygon:8080;
     server rpc-polygon:8080;
     server alchemy-polygon:8080;
   }
