--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -24,6 +24,7 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
+    server moralis-mainnet:8080;
     server alchemy-mainnet:8080;
     server infura-mainnet:8080;
     server infura-mainnet-2:8080 backup;
@@ -34,6 +35,7 @@ http {
     zone upstream_dynamic 256k;
 
     server bsc-rpc:8080;
+    server moralis-binance:8080;
     server dataseed-binance:8080;
     server dataseed-binance-2:8080;
     server dataseed-binance-3:8080;
@@ -50,6 +52,7 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
+    server moralis-avalanche:8080;
     server rpc-avalanche:8080;
   }
 
