--- a/moralis/docker-compose.yml
+++ b/moralis/docker-compose.yml
@@ -186,12 +186,12 @@ services:
     environment:
       - HOST=https://polygon-rpc.com
 
-  alchemy-polygon:
-    image: nginx
-    volumes:
-      - ./server.conf.template:/etc/nginx/templates/default.conf.template
-    environment:
-      - HOST=https://polygon-mainnet.g.alchemy.com/v2/YW8khK4qms8RrrfKMfdKennC3_DsLdV3
+  # alchemy-polygon:
+  #   image: nginx
+  #   volumes:
+  #     - ./server.conf.template:/etc/nginx/templates/default.conf.template
+  #   environment:
+  #     - HOST=https://polygon-mainnet.g.alchemy.com/v2/YW8khK4qms8RrrfKMfdKennC3_DsLdV3
 
   # ----------
   
@@ -253,7 +253,7 @@ services:
 
       - moralis-polygon
       - rpc-polygon
-      - alchemy-polygon
+      # - alchemy-polygon
 
       - rpc-polygon-mumbai
       - alchemy-polygon-mumbai
