--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -24,7 +24,7 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
-    server moralis-mainnet:8080;
+    server alchemy-mainnet:8080;
   }
 
   upstream binance {
