--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -31,7 +31,7 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
-    server moralis-binance:8080;
+    server pub-binance:8080;
     server dataseed-binance:8080;
     server dataseed-binance-2:8080;
     server dataseed-binance-3:8080;
@@ -63,7 +63,7 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
-    server moralis-polygon:8080;
+    # server moralis-polygon:8080;
     server rpc-polygon:8080;
   }
 
@@ -72,7 +72,7 @@ http {
     zone upstream_dynamic 256k;
 
     server rpc-polygon-mumbai:8080;
-    server alchemy-polygon-mumbai:8080;
+    # server alchemy-polygon-mumbai:8080;
   }
 
 
