--- a/ts-balancer/package.json
+++ b/ts-balancer/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^17.0.23",
     "axios": "^0.26.1",
     "express": "^4.17.3",
-    "https-proxy-agent": "^5.0.0"
+    "https-proxy-agent": "^5.0.0",
+    "typescript": "^4.6.2"
   }
 }
